Fix banner on mobile

--- a/src/features/banners.scss
+++ b/src/features/banners.scss
@@ -16,7 +16,7 @@ body:not(.banner-off) {
 
     .markdown-preview-view:not(.banner),
     .markdown-source-view.is-live-preview:not(.banner) {
-      --banner-mobile-offset: 0;
+      --banner-mobile-offset: 0px;
     }
   }
 
